feat: Add Skills management UI with React components

--- a/.qoder/repowiki/zh/content/项目概述/核心功能特性/技能系统.md
+++ b/.qoder/repowiki/zh/content/项目概述/核心功能特性/技能系统.md
@@ -10,6 +10,7 @@
 - [open_notebook/domain/skill.py](file://open_notebook/domain/skill.py)
 - [open_notebook/skills/content_crawler.py](file://open_notebook/skills/content_crawler.py)
 - [open_notebook/skills/browser_base.py](file://open_notebook/skills/browser_base.py)
+- [open_notebook/skills/browser_task.py](file://open_notebook/skills/browser_task.py)
 - [open_notebook/skills/note_organizer.py](file://open_notebook/skills/note_organizer.py)
 - [api/routers/skills.py](file://api/routers/skills.py)
 - [api/main.py](file://api/main.py)
@@ -23,12 +24,11 @@
 
 ## 更新摘要
 **所做更改**
-- 完全迁移到APScheduler-based调度器实现，替代原有的cron-based实现
-- 增强了调度器的生命周期管理，包括自动启动和停止
-- 改进了错误处理机制，特别是在调度器启动和任务执行过程中
-- 增强了日志记录功能，提供更详细的调度器状态信息
-- 更新了调度器API接口，支持更丰富的调度管理功能
-- 集成了全局调度器实例，简化了调度器的使用和管理
+- 新增BrowserTaskSkill和BrowserMonitorSkill浏览器自动化技能
+- 改进BrowserUseSkill和BrowserCrawlerSkill的AI集成，使用browser-use库
+- 更新技能注册系统以包含新的浏览器自动化技能
+- 增强浏览器自动化技能的参数验证和错误处理
+- 改进浏览器监控技能的变更检测机制
 
 ## 目录
 1. [简介](#简介)
@@ -51,6 +51,8 @@
 
 **最新更新** 技能系统现已集成了基于APScheduler的智能调度器，这是一个重大架构升级，完全替代了原有的cron-based实现。新的调度器基于APScheduler库，提供了更强大、更可靠的异步任务调度能力，支持基于cron表达式的自动技能执行。
 
+**重大更新** 新增了BrowserTaskSkill和BrowserMonitorSkill浏览器自动化技能，以及对BrowserUseSkill和BrowserCrawlerSkill的AI集成改进。这些新技能使用browser-use库实现AI驱动的浏览器自动化，支持自然语言描述的任务执行和网页监控。
+
 技能系统的核心特点：
 - **模块化设计**：每个技能都是独立的模块，可以单独开发和维护
 - **可扩展性**：支持动态注册新技能类型
@@ -62,6 +64,9 @@
 - **健壮的异常处理**：专门针对NotFoundError等异常进行优化处理
 - **增强的日志记录**：提供详细的调度器状态和执行日志
 - **自动生命周期管理**：调度器在应用启动和停止时自动管理
+- **AI驱动的浏览器自动化**：使用browser-use库实现自然语言控制的浏览器操作
+- **灵活的任务执行**：支持任意浏览器任务的自然语言描述
+- **实时网页监控**：自动检测网页内容变化并发送告警
 
 ## 项目结构
 
@@ -78,31 +83,33 @@ A --> F[scheduler.py<br/>APScheduler调度器]
 end
 subgraph "具体技能实现"
 G[content_crawler.py<br/>内容爬取技能]
-H[browser_base.py<br/>浏览器自动化技能]
-I[note_organizer.py<br/>笔记组织技能]
+H[browser_base.py<br/>浏览器自动化基类]
+I[browser_task.py<br/>浏览器任务技能]
+J[note_organizer.py<br/>笔记组织技能]
 end
 subgraph "API接口层"
-J[api/routers/skills.py<br/>REST API路由]
-K[api/main.py<br/>应用启动/停止]
+K[api/routers/skills.py<br/>REST API路由]
+L[api/main.py<br/>应用启动/停止]
 end
 subgraph "数据模型"
-L[domain/skill.py<br/>领域模型]
-M[domain/notebook.py<br/>资产和源模型]
-N[api/models.py<br/>API模型]
+M[domain/skill.py<br/>领域模型]
+N[domain/notebook.py<br/>资产和源模型]
+O[api/models.py<br/>API模型]
 end
 A --> G
 A --> H
 A --> I
-J --> A
-J --> L
-K --> F
-L --> A
-M --> G
-N --> M
+A --> J
+K --> A
+K --> M
+L --> F
+M --> A
+N --> G
+O --> N
 ```
 
 **图表来源**
-- [open_notebook/skills/__init__.py](file://open_notebook/skills/__init__.py#L1-L32)
+- [open_notebook/skills/__init__.py](file://open_notebook/skills/__init__.py#L1-L35)
 - [open_notebook/skills/base.py](file://open_notebook/skills/base.py#L1-L183)
 - [open_notebook/skills/registry.py](file://open_notebook/skills/registry.py#L1-L133)
 - [open_notebook/skills/runner.py](file://open_notebook/skills/runner.py#L1-L250)
@@ -113,7 +120,7 @@ N --> M
 - [api/main.py](file://api/main.py#L101-L122)
 
 **章节来源**
-- [open_notebook/skills/__init__.py](file://open_notebook/skills/__init__.py#L1-L32)
+- [open_notebook/skills/__init__.py](file://open_notebook/skills/__init__.py#L1-L35)
 - [open_notebook/skills/base.py](file://open_notebook/skills/base.py#L1-L183)
 - [open_notebook/skills/registry.py](file://open_notebook/skills/registry.py#L1-L133)
 - [open_notebook/skills/runner.py](file://open_notebook/skills/runner.py#L1-L250)
@@ -121,7 +128,7 @@ N --> M
 
 ## 核心组件
 
-技能系统由五个核心组件构成，它们协同工作以提供完整的自动化能力：
+技能系统由七个核心组件构成，它们协同工作以提供完整的自动化能力：
 
 ### 基础架构组件
 
@@ -138,6 +145,13 @@ N --> M
 3. **Asset** - 资产模型，封装文件路径和URL信息
 4. **Source** - 源模型，表示内容源及其关联的资产信息
 
+### 浏览器自动化组件
+
+1. **BrowserUseSkill** - AI驱动的浏览器自动化基类
+2. **BrowserTaskSkill** - 通用浏览器任务执行技能
+3. **BrowserMonitorSkill** - 网页监控和变更检测技能
+4. **BrowserCrawlerSkill** - AI驱动的网页爬取技能
+
 **章节来源**
 - [open_notebook/skills/base.py](file://open_notebook/skills/base.py#L83-L183)
 - [open_notebook/skills/registry.py](file://open_notebook/skills/registry.py#L12-L121)
@@ -148,7 +162,7 @@ N --> M
 
 ## 架构概览
 
-技能系统采用分层架构设计，确保了良好的关注点分离和可扩展性。**最新更新** 集成了基于APScheduler的智能调度器，实现了自动技能执行能力：
+技能系统采用分层架构设计，确保了良好的关注点分离和可扩展性。**最新更新** 集成了基于APScheduler的智能调度器和新的浏览器自动化技能：
 
 ```mermaid
 graph TB
@@ -165,7 +179,7 @@ end
 subgraph "技能实现层"
 Base[Skill基类]
 Content[内容爬取技能<br/>RssCrawlerSkill]
-Browser[浏览器技能]
+Browser[浏览器技能<br/>BrowserUseSkill, BrowserTaskSkill, BrowserMonitorSkill, BrowserCrawlerSkill]
 Organizer[笔记组织技能]
 end
 subgraph "调度器层"
@@ -350,6 +364,8 @@ SetStatus --> End([结束])
 
 ### 浏览器自动化技能
 
+**重大更新** 新增了BrowserTaskSkill和BrowserMonitorSkill浏览器自动化技能，以及对BrowserUseSkill和BrowserCrawlerSkill的AI集成改进。
+
 浏览器自动化技能使用browser-use库实现AI驱动的网页操作：
 
 ```mermaid
@@ -364,6 +380,20 @@ class BrowserUseSkill {
 +run_browser_task(task, max_steps) Dict
 +execute(context) SkillResult*
 }
+class BrowserTaskSkill {
++string task
++Optional~string~ url
++int max_steps
++bool save_screenshot
++Optional~string~ extract_data
++execute(context) SkillResult
+}
+class BrowserMonitorSkill {
++string url
++string check_task
++Optional~string~ expected_value
++execute(context) SkillResult
+}
 class BrowserCrawlerSkill {
 +List urls
 +string extraction_task
@@ -371,16 +401,22 @@ class BrowserCrawlerSkill {
 +bool follow_links
 +execute(context) SkillResult
 }
+BrowserUseSkill <|-- BrowserTaskSkill : "继承"
+BrowserUseSkill <|-- BrowserMonitorSkill : "继承"
 BrowserUseSkill <|-- BrowserCrawlerSkill : "继承"
 note for BrowserUseSkill "AI驱动的浏览器自动化<br/>- 使用browser-use库<br/>- 支持自然语言指令<br/>- Chrome浏览器集成"
+note for BrowserTaskSkill "通用任务执行<br/>- 自然语言描述任务<br/>- 支持截图保存<br/>- 数据提取功能"
+note for BrowserMonitorSkill "网页监控<br/>- 定期检查页面<br/>- 变更检测<br/>- 告警机制"
 note for BrowserCrawlerSkill "基于BrowserUseSkill的爬虫实现<br/>- 自动化网页内容提取<br/>- 支持链接跟随<br/>- 结构化数据输出"
 ```
 
 **图表来源**
-- [open_notebook/skills/browser_base.py](file://open_notebook/skills/browser_base.py#L17-L312)
+- [open_notebook/skills/browser_base.py](file://open_notebook/skills/browser_base.py#L17-L316)
+- [open_notebook/skills/browser_task.py](file://open_notebook/skills/browser_task.py#L17-L271)
 
 **章节来源**
-- [open_notebook/skills/browser_base.py](file://open_notebook/skills/browser_base.py#L17-L312)
+- [open_notebook/skills/browser_base.py](file://open_notebook/skills/browser_base.py#L17-L316)
+- [open_notebook/skills/browser_task.py](file://open_notebook/skills/browser_task.py#L17-L271)
 
 ### 笔记组织技能
 
@@ -403,10 +439,10 @@ ApplyTags --> Complete
 ```
 
 **图表来源**
-- [open_notebook/skills/note_organizer.py](file://open_notebook/skills/note_organizer.py#L19-L406)
+- [open_notebook/skills/note_organizer.py](file://open_notebook/skills/note_organizer.py#L19-L408)
 
 **章节来源**
-- [open_notebook/skills/note_organizer.py](file://open_notebook/skills/note_organizer.py#L19-L406)
+- [open_notebook/skills/note_organizer.py](file://open_notebook/skills/note_organizer.py#L19-L408)
 
 ## APScheduler调度器
 
@@ -802,7 +838,8 @@ Scheduler[scheduler.py]
 end
 subgraph "技能实现"
 Content[content_crawler.py]
-Browser[browser_base.py]
+BrowserBase[browser_base.py]
+BrowserTask[browser_task.py]
 Organizer[note_organizer.py]
 end
 subgraph "API层"
@@ -822,10 +859,12 @@ Runner --> Scheduler
 Scheduler --> APScheduler
 Registry --> Base
 Base --> Content
-Base --> Browser
+Base --> BrowserBase
+Base --> BrowserTask
 Base --> Organizer
 Content --> LangChain
-Browser --> BrowserUse
+BrowserBase --> BrowserUse
+BrowserTask --> BrowserUse
 Organizer --> LangChain
 Runner --> Domain
 API --> Domain
@@ -840,6 +879,7 @@ Repository --> Exceptions
 **图表来源**
 - [open_notebook/skills/base.py](file://open_notebook/skills/base.py#L8-L14)
 - [open_notebook/skills/browser_base.py](file://open_notebook/skills/browser_base.py#L13-L14)
+- [open_notebook/skills/browser_task.py](file://open_notebook/skills/browser_task.py#L12-L14)
 - [open_notebook/skills/note_organizer.py](file://open_notebook/skills/note_organizer.py#L14-L16)
 - [open_notebook/skills/scheduler.py](file://open_notebook/skills/scheduler.py#L12-L13)
 - [open_notebook/domain/notebook.py](file://open_notebook/domain/notebook.py#L1-L14)
@@ -851,6 +891,7 @@ Repository --> Exceptions
 **章节来源**
 - [open_notebook/skills/base.py](file://open_notebook/skills/base.py#L8-L14)
 - [open_notebook/skills/browser_base.py](file://open_notebook/skills/browser_base.py#L13-L14)
+- [open_notebook/skills/browser_task.py](file://open_notebook/skills/browser_task.py#L12-L14)
 - [open_notebook/skills/note_organizer.py](file://open_notebook/skills/note_organizer.py#L14-L16)
 - [open_notebook/skills/scheduler.py](file://open_notebook/skills/scheduler.py#L12-L13)
 - [open_notebook/domain/notebook.py](file://open_notebook/domain/notebook.py#L1-L14)
@@ -874,6 +915,13 @@ Repository --> Exceptions
 - **内存管理**：自动清理已完成的任务
 - **错误隔离**：调度器异常不影响其他任务执行
 - **全局实例管理**：使用全局skill_scheduler实例避免重复创建
+
+### 浏览器自动化性能优化
+- **AI驱动的浏览器操作**：使用browser-use库减少手动编码
+- **资源管理**：浏览器实例在执行后自动清理
+- **超时控制**：可配置的页面加载超时时间
+- **窗口大小优化**：可配置的浏览器窗口尺寸
+- **Chrome路径检测**：自动检测Chrome可执行文件位置
 
 ### 缓存策略
 - 日志使用轻量级缓存减少I/O操作
@@ -914,47 +962,67 @@ Repository --> Exceptions
    - 确认Chrome浏览器已安装且可执行
    - 检查LLM API密钥配置
    - 验证网络连接和代理设置
+   - 检查browser-use库是否正确安装
 
-5. **数据库连接问题**
+5. **浏览器任务执行错误**
+   - 验证任务描述是否清晰明确
+   - 检查最大步骤数设置是否合理
+   - 确认URL格式是否正确
+   - 验证AI模型配置
+
+6. **浏览器监控告警问题**
+   - 检查预期值设置是否正确
+   - 验证监控频率设置
+   - 确认页面内容提取逻辑
+   - 检查变更检测算法
+
+7. **数据库连接问题**
    - 检查数据库服务状态
    - 验证连接字符串配置
    - 确认表结构和权限
 
-6. **内存泄漏问题**
+8. **内存泄漏问题**
    - 确保浏览器实例正确关闭
    - 检查长生命周期对象的引用
    - 使用弱引用避免循环引用
 
-7. **初始化顺序错误**
+9. **初始化顺序错误**
    - 确保所有参数都在调用 `super().__init__(config)` 之前设置
    - 检查自定义验证方法是否正确访问参数
    - 验证参数类型转换和默认值设置
 
-8. **RSS爬虫异常处理问题**
-   - 检查NotFoundError异常是否被正确捕获
-   - 验证Asset模型数据结构的正确传递
-   - 确认Source构造函数接收正确的参数
+10. **RSS爬虫异常处理问题**
+    - 检查NotFoundError异常是否被正确捕获
+    - 验证Asset模型数据结构的正确传递
+    - 确认Source构造函数接收正确的参数
 
-9. **Asset模型集成问题**
-   - 检查Asset对象是否正确创建
-   - 验证Source构造函数的参数传递
-   - 确认API响应中的AssetModel转换
+11. **Asset模型集成问题**
+    - 检查Asset对象是否正确创建
+    - 验证Source构造函数的参数传递
+    - 确认API响应中的AssetModel转换
 
-10. **调度器API调用失败**
+12. **调度器API调用失败**
     - 检查调度器是否已启动
     - 验证技能实例ID是否存在
     - 确认cron表达式格式正确
     - 检查调度器状态和作业列表
 
-11. **APScheduler集成问题**
+13. **APScheduler集成问题**
     - 确认APScheduler版本满足要求（>=3.10.4）
     - 检查AsyncIOScheduler的启动和停止流程
     - 验证CronTrigger的创建和配置
     - 确认调度器的生命周期管理正确
 
+14. **浏览器自动化技能问题**
+    - 检查Chrome路径配置
+    - 验证AI模型提供商配置
+    - 确认browser-use库版本兼容性
+    - 检查浏览器权限和配置
+
 **章节来源**
 - [open_notebook/skills/runner.py](file://open_notebook/skills/runner.py#L133-L149)
 - [open_notebook/skills/browser_base.py](file://open_notebook/skills/browser_base.py#L127-L135)
+- [open_notebook/skills/browser_task.py](file://open_notebook/skills/browser_task.py#L90-L99)
 - [open_notebook/skills/content_crawler.py](file://open_notebook/skills/content_crawler.py#L93-L101)
 - [open_notebook/skills/scheduler.py](file://open_notebook/skills/scheduler.py#L84-L117)
 - [open_notebook/domain/notebook.py](file://open_notebook/domain/notebook.py#L232-L294)
@@ -967,6 +1035,8 @@ Repository --> Exceptions
 
 **最新重大更新** 技能系统集成了基于APScheduler的智能调度器，这是一个完全的架构升级，替代了原有的cron-based实现。这个新的调度器提供了更强大、更可靠的异步任务调度能力，实现了真正的智能自动化。
 
+**重大更新** 新增了BrowserTaskSkill和BrowserMonitorSkill浏览器自动化技能，以及对BrowserUseSkill和BrowserCrawlerSkill的AI集成改进。这些新技能使用browser-use库实现AI驱动的浏览器自动化，支持自然语言描述的任务执行和网页监控。
+
 系统的主要优势包括：
 - **高度可扩展**：支持动态注册新技能类型
 - **易于使用**：提供简洁的API接口和配置方式
@@ -977,6 +1047,10 @@ Repository --> Exceptions
 - **健壮异常处理**：专门针对NotFoundError等异常进行优化处理
 - **增强的日志记录**：提供详细的调度器状态和执行日志
 - **全局实例管理**：使用全局skill_scheduler实例简化管理
+- **AI驱动的浏览器自动化**：使用browser-use库实现自然语言控制的浏览器操作
+- **灵活的任务执行**：支持任意浏览器任务的自然语言描述
+- **实时网页监控**：自动检测网页内容变化并发送告警
+- **智能内容提取**：基于AI的网页内容提取和结构化处理
 
 经过最近的重大改进，系统在以下方面得到了显著提升：
 - **APScheduler调度器集成**：完全替代原有的cron-based实现
@@ -988,6 +1062,9 @@ Repository --> Exceptions
 - **异常处理最佳实践**：区分异常类型，提供优雅的错误恢复
 - **API响应一致性**：保持AssetModel格式的同时改进内部数据结构
 - **依赖关系明确**：APScheduler版本要求明确（>=3.10.4）
+- **浏览器自动化技能增强**：新增BrowserTaskSkill和BrowserMonitorSkill
+- **AI集成改进**：BrowserUseSkill和BrowserCrawlerSkill使用browser-use库
+- **参数验证增强**：改进的配置验证和错误处理机制
 
 未来的发展方向可能包括：
 - 更多内置技能类型的扩展
@@ -998,3 +1075,7 @@ Repository --> Exceptions
 - 增强调度器的可视化界面和管理工具
 - 支持更多调度模式（如间隔调度、事件驱动等）
 - 集成更高级的APScheduler特性，如作业持久化、集群支持等
+- 扩展浏览器自动化技能的功能和应用场景
+- 改进AI模型集成和性能优化
+- 增强浏览器监控和告警机制
+- 支持更多浏览器自动化场景和任务类型
